[project]
name = "one-week-rl"
version = "0.1.0"
description = "Reinforcement Learning from scratch in one week"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[box2d]>=1.2.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
]

[project.optional-dependencies]
rllibs = [
    "stable-baselines3>=2.0.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
